# ChangeLog for media-libs/libhydrogen
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libhydrogen/ChangeLog,v 1.1 2003/03/09 02:34:46 jje Exp $

*libhydrogen-0.7.4 (09 Mar 2003)

  09 Mar 2003; jje <jje@gentoo.org> libhydrogen-0.7.4.ebuild:
  Initial revision.
  
  Submitted by: Marc Hildebrand
