@@ -1,5 +1,5 @@
 MD5 a9ab00da559562966f830c2ceb486522 libhydrogen-0.7.4.ebuild 722
-MD5 ca9e49d5c07ac0ed6f395fbdcd12923a ChangeLog 375
+MD5 b6b64e1f48b4be4b0e433e50182d4ba4 ChangeLog 514
 MD5 ff1c6b3238845c55c4b5076017c46bf0 libhydrogen-0.7.6.ebuild 615
 MD5 df436f71033292980d53c5e17bb4c7ff files/digest-libhydrogen-0.7.4 69
 MD5 e8d517be5bd99fc7c17a42b66f2fd2ad files/digest-libhydrogen-0.7.6 69
