@@ -1,5 +1,5 @@
 MD5 34a6d0dd44a30b8be4f5010eb491d1e6 hydrogen-0.7.4.ebuild 656
-MD5 9985267140bf5ede8f9aeb7bbc943cea ChangeLog 490
-MD5 d66989e208f7952b689859918f3c5e40 hydrogen-0.7.6.ebuild 554
+MD5 b4a6df50cea14ff70fb5c9c3f9a7bbac ChangeLog 490
+MD5 259cb77d8c5b18d52f4e60ebbc5eed6d hydrogen-0.7.6.ebuild 656
 MD5 2bca495d9f9154d2363ca88f2d9a1f1d files/digest-hydrogen-0.7.4 66
 MD5 13b6a7d1984cc812a24d0285707e0464 files/digest-hydrogen-0.7.6 66
